[package]
name = "hanja"
version = "0.1.1"
authors = ["Jang Ryeol <northfolk28@gmail.com>"]
description = "Korean-Hanja(Chinese character for Korean language) dictionary"

documentation = "https://docs.rs/hanja"
repository = "https://github.com/bekker/hanja-rs"

readme = "README.md"

keywords = ["hangul", "hangeul", "korean", "libhangul", "hanja"]
license = "MIT"

build = "build.rs"

[build-dependencies]
phf_codegen = "0.7.21"

[dependencies]
phf = "0.7.21"
